# CivetRender

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake_helpers/: FindASan.cmake  FindMSan.cmake  FindSanitizers.cmake  FindTSan.cmake  FindUBSan.cmake  checkcuda.cu  sanitize-helpers.cmake
src/: civet.cpp
src/cameras/: environment.cpp  environment.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
src/core/: camera.cpp  camera.h  civet.h  editor.cpp  editor.h  engine.cpp  engine.h  film.cpp  film.h  filter.cpp  filter.h  geometry.h  illuminancefield.cpp  illuminancefield.h  input_manager.cpp  input_manager.h  interaction.cpp  interaction.h  light.cpp  light.h  material.cpp  material.h  medium.cpp  medium.h  memory.cpp  memory.h  mesh.cpp  mesh.h  mipmap.cpp  mipmap.h  node.cpp  node.h  primitive.cpp  primitive.h  ray.h  sampler.cpp  sampler.h  scene.cpp  scene.h  shader.cpp  (+12 more)
src/core/geometry/: SG.cpp  SG.h  quaternion.cpp  quaternion.h  ray.h  transform.cpp  transform.h  vecmath.h
src/gpu/: testCuda.cu  testCuda.h
src/lights/: distant.cpp  distant.h  point.cpp  point.h
src/main/: civet.cpp
src/material/: matte_shader.frag  matte_shader.vert
src/materials/: dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  disney.cpp  disney.h  fourier.cpp  fourier.h  mix.cpp  mix.h
src/rendering/: deferred_renderer.cpp  deferred_renderer.h  forward_renderer.cpp  forward_renderer.h  gbuffer.cpp  gbuffer.h
src/shaders/: SSR_frag.glsl  deferred_dirlight_pass_frag.glsl  deferred_geometry_frag.glsl  deferred_geometry_vert.glsl  deferred_indirect_pass_frag.glsl  deferred_pointlight_pass_frag.glsl  irradiance_frag.glsl  light_cascaded_depth_geom.glsl  light_cube_depth_frag.glsl  light_cube_depth_geom.glsl  light_cube_depth_vert.glsl  light_depth_frag.glsl  light_depth_vert.glsl  null_frag.glsl  null_vert.glsl  postprocess_pass_frag.glsl  precompute_distance_frag.glsl  precompute_distance_geom.glsl  reflection_frag.glsl  screen_space_vert.glsl  simple_forward.cpp  simple_forward.h  simple_forward_frag.glsl  simple_forward_vert.glsl  skybox_frag.glsl  skybox_quad_frag.glsl  skybox_quad_vert.glsl  skybox_vert.glsl  solid.cpp  solid.h  solid_shader.frag
src/shapes/: sphere.cpp  sphere.h  subdivide.cpp  subdivide.h  triangle.cpp  triangle.h
src/textures/: bilerp.cpp  bilerp.h  constant.cpp  constant.h  imagemap.cpp  imagemap.h  mix.cpp  mix.h  scale.cpp  scale.h
src/utils/: bvh.cpp  bvh.h  imageio.cpp  imageio.h  interpolation.cpp  interpolation.h  memory.cpp  memory.h  microfacet.cpp  microfacet.h  parallel.cpp  parallel.h  reflection.cpp  reflection.h  rng.h  sampling.cpp  sampling.h  subdivide.cpp
src/utils/samplers/: random.cpp  random.h  stratified.cpp  stratified.h
